syntax = "proto3";

option csharp_namespace="mx.autocom.servicio.paquetes.service";
option go_package = "proto";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";


message Zona
{
	int32 id_zona = 1;
	string nombre_zona = 2;
}


message ZonaRequest
{
	google.protobuf.Int32Value id_zona = 1;
	google.protobuf.StringValue nombre_zona = 2;
	google.protobuf.Int32Value from = 3;
	google.protobuf.Int32Value limit = 4;
	google.protobuf.StringValue order_by = 5;
	google.protobuf.BoolValue asc = 6;	
}

message Zonas
{
	repeated Zona zonas=1;
}


message Agencia
{
	int32 id_agencia = 1;
	string nombre_agencia = 2;
	google.protobuf.StringValue google_place = 3;
	bool activa = 4;
	google.protobuf.StringValue codigo_qis=5;
	Zona zona = 6;
}

message AgenciaRequest
{
	google.protobuf.Int32Value id_agencia = 1;
	google.protobuf.StringValue nombre_agencia = 2;
	google.protobuf.StringValue  zona = 3;
	google.protobuf.Int32Value from= 4;
	google.protobuf.Int32Value limit=5;
	google.protobuf.StringValue order_by=6;
	google.protobuf.BoolValue asc =7;	
}

message Agencias
{
	repeated Agencia agencias=1;
}

message Marca
{
	int32 id_marca = 1;
	string nombre_marca = 2;
	string codigo_qis = 3;
}

message Marcas
{
	repeated Marca marcas=1;
}

message MarcaRequest
{
	google.protobuf.Int32Value id_marca = 1;
	google.protobuf.StringValue nombre_marca = 2;
	google.protobuf.StringValue codigo_qis = 3;
	google.protobuf.Int32Value from=4;
	google.protobuf.Int32Value limit=5;
	google.protobuf.StringValue order_by=6;
	google.protobuf.BoolValue asc =7;	
}

message Familia
{
	int32 id_familia = 1;
	string nombre_familia = 2;
	string codigo_qis = 3;
	Marca marca = 4;
}

message Familias
{
	repeated Familia familias=1;
}

message FamiliaRequest
{
	google.protobuf.Int32Value id_familia = 1;
	google.protobuf.StringValue nombre_familia = 2;
	google.protobuf.StringValue codigo_qis = 3;
	google.protobuf.StringValue nombre_marca = 4;
	google.protobuf.Int32Value from=5;
	google.protobuf.Int32Value limit=6;
	google.protobuf.StringValue order_by=7;
	google.protobuf.BoolValue asc =8;	
}

message Combustible
{
	int32 id_combustible= 1;
	string clave = 2;
	string descripcion = 3;
}

message Combustibles
{
	repeated Combustible combustibles=1;
}

message CombustibleRequest
{
	google.protobuf.Int32Value id_combustible = 1;
	google.protobuf.StringValue descripcion = 2;
	google.protobuf.StringValue clave = 3;
	google.protobuf.Int32Value from=4;
	google.protobuf.Int32Value limit=5;
	google.protobuf.StringValue order_by=6;
	google.protobuf.BoolValue asc =7;	
}

message Articulo
{
	int32 id_articulo =1;
	google.protobuf.StringValue codigo_qis=2;
	string descripcion=3;
	double precio=4;
}

message ArticuloKit
{
	int32 id_articulo = 1;
	string descripcion=2;
	double precio = 3;
	double descuento = 4;
}

message Articulos
{
	repeated Articulo articulos=1;
}

message ArticuloRequest
{
	google.protobuf.Int32Value id_articulo = 1;
	google.protobuf.StringValue descripcion = 2;
	google.protobuf.StringValue codigo_qis = 3;
	google.protobuf.Int32Value from=4;
	google.protobuf.Int32Value limit=5;
	google.protobuf.StringValue order_by=6;
	google.protobuf.BoolValue asc =7;	
}

message Servicio
{
	int32 id_servicio =1;
	int32 kilometraje_maximo=2;
	int32 anho=3;
	int32 id_familia=4;
	double precio=5;
	int32 id_combustible=6;
	string codigo_qis=7;
	string nombre_marca=8;
	string nombre_familia=9;
	string combustible=10;
}

message ServicioRequest
{
	google.protobuf.Int32Value id_servicio =1;
	google.protobuf.StringValue codigo_qis=2;
	google.protobuf.StringValue nombre_marca=3;
	google.protobuf.StringValue nombre_familia=4;
	google.protobuf.Int32Value anho=5;
	google.protobuf.StringValue combustible=6;
	google.protobuf.Int32Value kilometraje_maximo=7;
	google.protobuf.Int32Value from=8;
	google.protobuf.Int32Value limit=9;
	google.protobuf.StringValue order_by=10;
	google.protobuf.BoolValue asc =11;	
}

message Servicios
{
	repeated Servicio servicios=1;
}


message ManoObra
{
	int32 id_mano_obra=1;
	string codigo_qis=2;
	string descripcion=3;
}

message KitManoObra
{
	int32 id_mano_obra = 1;
	string descripcion=2;
	double precio = 3;
	double descuento = 4;
}

message ManoObraRequest
{
	google.protobuf.Int32Value id_mano_obra=1;
	google.protobuf.StringValue codigo_qis=2;
	google.protobuf.StringValue descripcion=3;
	google.protobuf.Int32Value from=4;
	google.protobuf.Int32Value limit=5;
	google.protobuf.StringValue order_by=6;
	google.protobuf.BoolValue asc =7;	
}

// Para seguir la convención de nombres se hace esta burrada
message ManosObra
{
	repeated ManoObra manos_obra=1;
}

message Date
{
	int32 year=1;
	int32 month=2;
	int32 day=3;
}

message Promocion
{
	int32 id_promocion=1;
	string codigo_promocion=2;
	string descripcion=3;
	Date fecha_inicio=4;
	Date fecha_fin=5;
	bool vigente=6;
}

message PromocionRequest
{
	google.protobuf.Int32Value id_promocion=1;
	google.protobuf.StringValue codigo_promocion=2;
	google.protobuf.StringValue descripcion=3;
	google.protobuf.BoolValue vigentes=4;
	google.protobuf.Int32Value from=5;
	google.protobuf.Int32Value limit=6;
	google.protobuf.StringValue order_by=7;
	google.protobuf.BoolValue asc =8;	
}

message Promociones
{
	repeated Promocion promociones=1;
}

message Kit
{
	int32 id_kit=1;
	string codigo_qis=2;
	string descripcion=3;
	string uri_foto=4;
	repeated ArticuloKit articulos=5;
	repeated KitManoObra mano_obra=6;
	repeated Zona zonas=7;
}

message KitRequest
{
	google.protobuf.Int32Value id_kit= 1;
	google.protobuf.StringValue descripcion = 2;
	google.protobuf.StringValue codigo_qis = 3;
	google.protobuf.Int32Value from=4;
	google.protobuf.Int32Value limit=5;
	google.protobuf.StringValue order_by=6;
	google.protobuf.BoolValue asc =7;	
}

message Kits
{
	repeated Kit kits=1;
}
service PaquetesGrpcService{
	rpc GetAllZonas(ZonaRequest) returns (Zonas) {}
	rpc GetAllAgencias(AgenciaRequest) returns (Agencias) {}
	rpc GetAllMarcas(MarcaRequest) returns (Marcas) {}
	rpc GetAllFamilias(FamiliaRequest) returns (Familias) {}
	rpc GetAllCombustibles(CombustibleRequest) returns (Combustibles) {}
	rpc GetAllArticulos(ArticuloRequest) returns (Articulos) {}
	rpc GetAllServicios(ServicioRequest) returns (Servicios) {}
	rpc GetAllManoObra(ManoObraRequest) returns (ManosObra) {}
	rpc GetAllPromociones(PromocionRequest) returns (Promociones) {}
	rpc GetAllKits(KitRequest) returns (Kits) {}
}